# cpu-rag

./: .gitignore  HPC_SETUP.md  MD_FORMATTING.md  README.md  benchmark_combined.py  benchmark_ctx.py  benchmark_models.py  benchmark_models_results.json  benchmark_models_smollm3.json  benchmark_rag_speed.py  benchmark_tuning.py  benchmark_tuning_granite_threads.json  benchmark_tuning_prompts.json  benchmark_tuning_threads.json  compare_models.py  compare_strategies.py  demo_rag.py  eval_candidates.py  eval_candidates_report.md  eval_dataset.json  eval_dataset_realistic.json  eval_retrieval.py  inspect_rag.py  inspect_retrieval.py  main_rag.py  pipeline_chunks.py  pipeline_embed.py  prompt_versions.md  pyproject.toml  queries.txt  sweep.py  sweep.slurm  sweep_chunks.slurm  sweep_reeval.py  sweep_reeval.slurm  test_retrieval.py
docs/: eval_dataset.md  tuning-report.md
prompts/: generate_eval_queries.md
src/: chunks.py  embeddings.py  evaluation.py  llm.py  retrieval.py  tokenizers.py
