[project]
name = "aiciblock-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.10",
    "langchain-nomic>=0.1.0",
    "nomic[local]>=3.0.0",
    "langchain-text-splitters>=1.1.1",
    "openai>=1.0.0",
    "llama-cpp-python>=0.3.0",
    "qdrant-client>=1.12.0",
    "tiktoken>=0.12.0",
    "rank-bm25>=0.2.2",
    "spacy>=3.8.11",
    "es-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.8.0/es_core_news_sm-3.8.0-py3-none-any.whl",
    "huggingface-hub>=1.4.1",
]

[project.optional-dependencies]
rerank = [
    "sentence-transformers>=3.0.0",
]
